Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,19 +7,7 @@ trigger:
 - master
 
 #pool:
-#  vmImage: ubuntu-latest
-#   vmImage: "windows-latest"
-strategy:
-  matrix:
-    linux:
-      imageName: "ubuntu-latest"
-    windows:
-      imageName: "windows-latest"
-  maxParallel: 2
-
-pool:
-  vmImage: $(imageName)
-
+  vmImage: ubuntu-latest
 
 steps:
 - script: echo Hello, world!
